test/spec_vectors/global/ok/module_20.wat
(module (global i32 (i32.const 0)) (global i32 (global.get 0)))