test/spec_vectors/global/fail/module_29.wat
(module (func (result i32) (global.get 0)))